--- a/STM32/STM32-ROS-Robot-Controller-HAL/STM32-ROS-Robot-Controller-HAL.ioc
+++ b/STM32/STM32-ROS-Robot-Controller-HAL/STM32-ROS-Robot-Controller-HAL.ioc
@@ -14,7 +14,7 @@ ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configTOTAL_HEAP_SIZE,MEMORY_ALLOCATION
 FREERTOS.MEMORY_ALLOCATION=2
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;KEY,-1,128,key_task,As external,NULL,Static,KEYBuffer,KEYControlBlock;VIN,-1,128,vin_task,As external,NULL,Static,VINBuffer,VINControlBlock;UART_PI,2,128,uart_pi_task,As external,NULL,Static,UART_PIBuffer,UART_PIControlBlock;UART_DEBUG,0,128,uart_debug_task,As external,NULL,Static,UART_DEBUGBuffer,UART_DEBUGControlBlock;ROBOT_MOVE,2,128,robot_move_task,As external,NULL,Static,ROBOT_MOVEBuffer,ROBOT_MOVEControlBlock;IMU,1,128,imu_task,As external,NULL,Dynamic,NULL,NULL;LED,-1,128,led_task,As external,NULL,Dynamic,NULL,NULL;OTHER,0,128,other_task,As external,NULL,Dynamic,NULL,NULL;CMD,0,128,cmd_task,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Static,defaultTaskBuffer,defaultTaskControlBlock;KEY,-1,128,key_task,As external,NULL,Dynamic,NULL,NULL;VIN,-1,128,vin_task,As external,NULL,Dynamic,NULL,NULL;PI,2,128,pi_task,As external,NULL,Dynamic,NULL,NULL;ROBOT_MOVE,2,128,robot_move_task,As external,NULL,Dynamic,NULL,NULL;IMU,1,128,imu_task,As external,NULL,Dynamic,NULL,NULL;LED,-1,128,led_task,As external,NULL,Dynamic,NULL,NULL;OTHER,0,128,other_task,As external,NULL,Dynamic,NULL,NULL;CMD,0,128,cmd_task,As external,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=10000
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -25,6 +25,7 @@ Mcu.IP1=ADC2
 Mcu.IP10=TIM8
 Mcu.IP11=USART1
 Mcu.IP12=USART2
+Mcu.IP13=USART3
 Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -33,7 +34,7 @@ Mcu.IP6=TIM2
 Mcu.IP7=TIM3
 Mcu.IP8=TIM4
 Mcu.IP9=TIM5
-Mcu.IPNb=13
+Mcu.IPNb=14
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
@@ -42,41 +43,43 @@ Mcu.Pin10=PA3
 Mcu.Pin11=PC4
 Mcu.Pin12=PC5
 Mcu.Pin13=PB0
-Mcu.Pin14=PB14
-Mcu.Pin15=PB15
-Mcu.Pin16=PC6
-Mcu.Pin17=PC7
-Mcu.Pin18=PC8
-Mcu.Pin19=PC9
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB14
+Mcu.Pin17=PB15
+Mcu.Pin18=PC6
+Mcu.Pin19=PC7
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=PA8
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PA15
-Mcu.Pin26=PC12
-Mcu.Pin27=PD2
-Mcu.Pin28=PB3
-Mcu.Pin29=PB4
+Mcu.Pin20=PC8
+Mcu.Pin21=PC9
+Mcu.Pin22=PA8
+Mcu.Pin23=PA9
+Mcu.Pin24=PA10
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PA15
+Mcu.Pin28=PC12
+Mcu.Pin29=PD2
 Mcu.Pin3=PC0
-Mcu.Pin30=PB5
-Mcu.Pin31=PB6
-Mcu.Pin32=PB7
-Mcu.Pin33=PB8
-Mcu.Pin34=PB9
-Mcu.Pin35=VP_ADC1_TempSens_Input
-Mcu.Pin36=VP_ADC1_Vref_Input
-Mcu.Pin37=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin38=VP_SYS_VS_tim6
-Mcu.Pin39=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin30=PB3
+Mcu.Pin31=PB4
+Mcu.Pin32=PB5
+Mcu.Pin33=PB6
+Mcu.Pin34=PB7
+Mcu.Pin35=PB8
+Mcu.Pin36=PB9
+Mcu.Pin37=VP_ADC1_TempSens_Input
+Mcu.Pin38=VP_ADC1_Vref_Input
+Mcu.Pin39=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin4=PC1
+Mcu.Pin40=VP_SYS_VS_tim6
+Mcu.Pin41=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=40
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -100,6 +103,7 @@ NVIC.TimeBase=TIM6_IRQn
 NVIC.TimeBaseIP=TIM6
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=M4EA
@@ -144,6 +148,10 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=VIN
 PB0.Locked=true
 PB0.Signal=ADCx_IN8
+PB10.Mode=Asynchronous
+PB10.Signal=USART3_TX
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
 PB14.GPIOParameters=GPIO_Speed,GPIO_Label
 PB14.GPIO_Label=M4IN1
 PB14.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -289,7 +297,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM8_Init-TIM8-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_ADC2_Init-ADC2-false-HAL-true,11-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM8_Init-TIM8-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,10-MX_ADC2_Init-ADC2-false-HAL-true,11-MX_ADC1_Init-ADC1-false-HAL-true,12-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -366,6 +374,8 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
 VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 VP_ADC1_Vref_Input.Mode=IN-Vrefint
